Vittu se on siinä

--- a/tex/niko_references.bib
+++ b/tex/niko_references.bib
@@ -262,3 +262,20 @@
 	school  = {Tampereen ammattikorkeakoulu},
 	year    = {2014}
 }
+
+@misc{helen,
+	organization = {Helen Oy},
+	title        = {Älykäs sähkövarasto pientaloon},
+	url          = {https://www.helen.fi/aurinkopaneelit/sahko-varastointi/sahkovarasto-pientaloon},
+	urldate      = {2020-12-18},
+}
+
+@article{nettomittaus,
+	author          = {Tero Ahonen},
+	title           = {Sähköverkkoyhtiöiden mittareissa ongelma – omakotitalon aurinkoenergia ei päädy kokonaan tuottajan hyödyksi},
+	publisher       = {Tekniikka&Talous},
+	url          		= {https://www.tekniikkatalous.fi/blogit/sahkoverkkoyhtioiden-mittareissa-ongelma-omakotitalon-aurinkoenergia-ei-paady-kokonaan-tuottajan-hyodyksi/01aec147-7c80-379f-8f9b-5d5f3cf7f4f7},
+	date         		= {2018-10-11},
+	urldate      		= {2020-12-18},
+}
+
