--- a/tex/sidosryhmat.tex
+++ b/tex/sidosryhmat.tex
@@ -10,9 +10,9 @@ Luonnollisesti eri sidosryhmät ovat kiinnostuneet erilaisiin käyttötarkoituks
 \section{Kantaverkkoyhtiö Fingrid}
   Suomen kantaverkkoyhtiönä Fingrid asettaa vaatimuksia siihen liittyen, mitä rajapintoja järjestelmien on sisällettävä. Se vaatii alle \SI{1}{\mega\watt} järjestelmien (voimalaitosten) sisältämään logiikkaportin, jonka kautta saapuvalla käskyllä voimalaitoksen on lopetettava pätötehon tuotanto viiden sekunnin kuluessa. Yli \SI{1}{\mega\watt}:n suuruiset järjestelmät tulee taas varustaa väyläliitännällä, jolla voidaan alentaa tuotannon pätötehoa annetun ohjearvon mukaisesti. Tämän liitännän on oltava yhteensopiva IEC60870-6, IEC60870-5 tai IEC61850 -protokollan kanssa. Fingrid ei dokumentissaan kuitenkaan ilmoita, täytyykö näiden liitäntöjen olla käytössä, vai riittääkö että järjestelmissä on liitäntä olemassa. \parencite{VJV2018}
 
-  Mikäli Fingridin voimajohtoon liitettävä voimalaitos on yli \SI{1}{\mega\watt}:n tehoinen, se on varustettava eroonkytkentäreleistyksellä. Yli \SI{5}{\mega\watt}:n tehoinen voimalaitos vaatii lisäksi eroonkytkennän viestiyhteyden pikajälleenkytkentöjen toiminnan varmistamiseksi. Jos taas voimalaitos liittyy suoraan tai Fingridin asiakkaan verkon kautta kantaverkon kytkinkenttään, ei eroonkytkentäreleistystä vaadita. Tahattoman saarekekäytön estäminen on joissain inverttereissä integroituna, jolloin ne tarkkailevat verkon tilaa ja huomattuaan saarekkeen muodostumisen, kytkeytyvät irti. Tällöin alle \SI{5}{\mega\watt}:n järjestelmät eivät tarvitse erillisiä laitteistoja eroonkytkentään, vaan invertteri toteuttaa itsessään jo tämän vaatimuksen.
+  Mikäli Fingridin voimajohtoon liitettävä voimalaitos on yli \SI{1}{\mega\watt}:n tehoinen, se on varustettava eroonkytkentäreleistyksellä. Yli \SI{5}{\mega\watt}:n tehoinen voimalaitos vaatii lisäksi eroonkytkennän viestiyhteyden pikajälleenkytkentöjen toiminnan varmistamiseksi. Jos taas voimalaitos liittyy suoraan tai Fingridin asiakkaan verkon kautta kantaverkon kytkinkenttään, ei eroonkytkentäreleistystä vaadita. Tahattoman saarekekäytön estäminen on joissain inverttereissä integroituna, jolloin ne tarkkailevat verkon tilaa ja huomattuaan saarekkeen muodostumisen, kytkeytyvät irti. Tällöin alle \SI{5}{\mega\watt}:n järjestelmät eivät tarvitse erillisiä laitteistoja eroonkytkentään, vaan invertteri toteuttaa itsessään jo tämän vaatimuksen. \parencite{VJV2018}
 
-  Yli \SI{10}{\mega\watt}:n järjestelmien kohdalla Fingridin Kantaverkkokeskus tai liittymispisteen verkonhaltija voi tarvittaessa pyytää järjestelmän käytöstä vastaavaa toimijaa muuttamaan pätö- tai loistehosäädön asetteluarvoja voimalaitosteknologian asettamissa rajoissa \parencite{VJV2018}. Fingrid ei täten ota kantaa siihen, miten tämä säätäminen tapahtuu. Fingridin tarpeet järjestelmien rajapinnoista rajoittuvat siten erityistilanteissa järjestelmän alasajoon tai sen tehonsäätöön käytöstä vastaavan toimijan kautta.
+  Yli \SI{1}{\mega\watt}:n järjestelmien on kyettävä joko toimimaan tehokertoimella 1.0 tai vaihtoehtoisesti tukemaan verkon jännitettä loistehoa säätämällä. Yli \SI{10}{\mega\watt}:n järjestelmien kohdalla säädön on tapahduttava automaattisesti. Lisäksi Fingridin Kantaverkkokeskus tai liittymispisteen verkonhaltija voi tarvittaessa pyytää järjestelmän käytöstä vastaavaa toimijaa muuttamaan pätö- tai loistehosäädön asetteluarvoja voimalaitosteknologian asettamissa rajoissa. Fingrid ei täten ota kantaa siihen, miten tämä säätäminen tapahtuu. Fingridin tarpeet järjestelmien rajapinnoista rajoittuvat siten erityistilanteissa järjestelmän alasajoon tai sen tehonsäätöön käytöstä vastaavan toimijan kautta. \parencite{VJV2018}
 
 \section{Verkonhaltija}
 
@@ -20,7 +20,7 @@ Luonnollisesti eri sidosryhmät ovat kiinnostuneet erilaisiin käyttötarkoituks
 
   Älykkäästä tuntimittauslaitteistosta käytetään usein termiä älymittari, \gls{AMR}-mittari tai \gls{AMI}-mittari. Termin \gls{AMR} viitatessa lähinnä mittarin automaattiseen luentaan, saattaisi \gls{AMI}-mittari olla oikeampi termi. Lyhenne \gls{AMI} tarkoittaa mittareiden muodostamaa järjestelmää, jossa tieto liikkuu myös kohti mittareita ja niiden takana olevia kiinteistöjä. \parencite{dictOfEnergy}
 
-  Verkonhaltija ei itsessään ole energian ostaja tai myyjä, vaan se siirtää sähkön verkossa ja on vastuussa verkon toimivuudesta. Tästä syystä verkonhaltijan saamat hyödyt mittareiden etäohjauksesta ovat vähäiset. Yksi hyöty verkonhaltijalle on kuitenkin sähkönkäyttöpaikan irrottaminen verkosta etänä, esimerkiksi laajemman huoltotyön ajaksi. Tällöin verkonhaltijan ei tarvitse käyttää resursseja käydäkseen jokaisessa sähkönkäyttöpaikassa irrottamassa sen sähköverkosta ennen huoltotöitä.
+  Verkonhaltija ei itsessään ole energian ostaja tai myyjä, vaan se siirtää sähkön verkossa ja on vastuussa verkon toimivuudesta. Tästä syystä verkonhaltijan saamat suorat hyödyt mittareiden etäohjauksesta ovat vähäiset. Yksi hyöty verkonhaltijalle on kuitenkin sähkönkäyttöpaikan irrottaminen verkosta etänä, esimerkiksi laajemman huoltotyön ajaksi. Tällöin verkonhaltijan ei tarvitse käyttää resursseja käydäkseen jokaisessa sähkönkäyttöpaikassa irrottamassa sen sähköverkosta ennen huoltotöitä. Toisaalta verkonhaltija voi tarjota palveluna AMI-rajapintaa, jolloin se voisi saada siitä tuottoa. Lisäksi, jos mittareita käytetään tehopiikkien tasoitukseen, hyödyttää tämä verkonhaltijaa, sillä tällöin verkon kapasiteetti riittää paremmin ja investointeja voidaan siirtää myöhemmälle.
 
 \section{Järjestelmän omistaja}
 
@@ -52,6 +52,6 @@ Luonnollisesti eri sidosryhmät ovat kiinnostuneet erilaisiin käyttötarkoituks
 
   Mikäli invertterit pystyvät tuottamaan loistehoa pätötehon tuotannosta riippumatta, voi aggregaattori olla kiinnostunut ohjaamaan niitä virtuaalivoimalan tavoin isommissa ryhmissä. Nykyisillä ratkaisuilla tämä ei kuitenkaan ole vielä mahdollista. Esimerkiksi standardoitu rajapinta pilvipalveluintegraatioihin eri valmistajien välillä voisi mahdollistaa tämän, mutta ensin pitäisi varmistaa, soveltuvatko valmistajien pilvipalvelut tähän tarkoitukseen esimerkiksi tietoturvan ja käyttövarmuuden näkökulmasta.
 
-  Aggregaattori voi myös tulevaisuudessa mahdollisesti ohjata akullisia järjestelmiä virtuaalivoimalan tavoin. Tällöin on sovittava raja-arvot, millaisilla varaustasoilla aggregaattori voi säätää energiavarastoa. 
+  Aggregaattori voi myös tulevaisuudessa mahdollisesti ohjata akullisia järjestelmiä virtuaalivoimalan tavoin. Tällöin on sovittava raja-arvot, millaisilla varaustasoilla aggregaattori voi säätää energiavarastoa, jotta omistajalla on aina tarvittava vähimmäiskapasiteetti käytettävissä tarpeen tullen.
   
   Älymittareiden hyödyntäminen näihin edellä mainittuihin tarkoituksiin on tällä hetkellä haastavaa, sillä asennetuissa mittareissa ei ole muita ohjausrajapintoja kuin releohjaukset. Tulevaisuudessa mittareihin mahdollisesti tulee muitakin rajapintoja, mutta todennäköisempää on se, että aggregaattori ohjaa erillisen kiinteistöautomaation kautta kuormia. Tällöin älymittareiden käyttövarmuus ei heikenny monimutkaisten toimintojen lisääntyessä, sillä kiinteistöautomaatio sisältää monimutkaisemman kommunikaation laitteiden kanssa ja älymittari voi keskittyä mittaustiedon toimittamiseen.
