--- a/tex/sovellukset.tex
+++ b/tex/sovellukset.tex
@@ -48,9 +48,11 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
   Virtuaalivoimala voidaan koostaa kohteista, joissa energiaa saadaan varastoitua väliaikaisesti. Energiaa voidaan varastoida käyttökohteessa esimerkiksi akkuihin, josta esimerkkinä toimii kauppakeskus Sellon virtuaalivoimala Espoossa \parencite{sello}. Myöskin sähköautojen akkuja voidaan käyttää energian varastointiin, tällöin puhutaan \gls{V2G}-tekniikasta \parencite{dictOfEnergy}. Mikäli energiaa varastoidaan itsenäisesti toimivaan suureen akustoon, tai esimerkiksi paineilmavoimalaitokseen tai pumppuvoimalaitokseen, puhutaan silloin yleensä sähköenergian varastoinnista \parencite{dictOfEnergy}, vaikka kyseiset laitokset voisivat toimia myös virtuaalivoimalan osana.
 
-  Kotitalouksien aurinkosähköjärjestelmistä koostuva virtuaalivoimala perustuu akullisten järjestelmien tuottamaan joustoon. Järjestelmässä olevien akkujen ei tarvitse olla kovinkaan suuria, jos niiden määrä sähköjärjestelmässä on suuri. Tällöin voidaan ohjata hyvinkin suurta määrää erittäin nopeasti säätyvää tehoa. Akkujen korkea hinta luo tosin korkean kynnyksen hankinnalle, varsinkin kun kuluttajan saamat hyödyt eivät välttämättä ole kovinkaan suuret. Tämän sovelluksen käyttöä rajoittaa kommunikaatiorajapintojen monimutkaisuus samalla tavalla kuin aurinkosähköjärjestelmien etähallintaa; virtuaalivoimalaa hallinnoiva aggregaatti tarvitsee kommunikaatiorajapinnan jokaiseen kohteeseen, sillä nykyisellään sitä ei verkonhaltijalla ole. Tämä on tosin mahdollista toteuttaa, jos virtuaalivoimaloille saataisiin standardoitua rajapinta, sillä silloin valmistajat voisivat integroida tämän rajapinnan heidän omaan verkkopalveluunsa, eikä järjestelmä vaatisi tällöin fyysisiä muutoksia ollenkaan.
+  Kotitalouksien aurinkosähköjärjestelmistä koostuva virtuaalivoimala perustuu akullisten järjestelmien tuottamaan joustoon. Järjestelmässä olevien akkujen ei tarvitse olla kapasiteetiltaan kovinkaan suuria, jos niiden määrä sähköjärjestelmässä on suuri. Tällöin voidaan ohjata hyvinkin suurta määrää erittäin nopeasti säätyvää tehoa. Akkujen korkea hinta luo tosin korkean kynnyksen hankinnalle, varsinkin kun kuluttajan saamat hyödyt eivät välttämättä ole kovinkaan suuret. Tämän sovelluksen käyttöä rajoittaa kommunikaatiorajapintojen monimutkaisuus samalla tavalla kuin aurinkosähköjärjestelmien etähallintaa; virtuaalivoimalaa hallinnoiva aggregaatti tarvitsee kommunikaatiorajapinnan jokaiseen kohteeseen, sillä nykyisellään sitä ei verkonhaltijalla ole. Tätä helpottaa huomattavasti, jos laitteilla on standardoitu rajapinta, johon voidaan kustannustehokkaasti liittyä. Esimerkiksi Helen tarjoaa älykästä sähkövarastoa, joka liitetään osaksi sähköverkkoa, ja sitä käytetään älykkään sähköverkon tukemiseen, mutta tarjoaa vain yhden valmistajan sähkövarastoja tarkoitukseen \parencite{helen}.
 
-  Lämpöpumpuista koostuvalle virtuaalivoimalalle ominaista on nimenomaan kulutusjouston myyminen. Virtuaalivoimalan toimiessa osana lämmitysjärjestelmää, käytetään esimerkiksi lämminvesivaraajaa tai kiinteistön rakenteita energiavarastona. Kun virtuaalivoimalaa käytetään kompensoimaan alituotantoa, kytketään lämpöpumppu, lämmitysvastus tai muu vastaava sähköä kuluttava toiminta pois päältä. Lämmityslaitteiden poiskytkemisaika on yleensä maksimissaan muutamia tunteja, minkä ansiosta lämmitettävä kiinteistö tai kohde ei ehdi jäähtymään merkittävästi, eikä esimerkiksi asumismukavuudesta tarvitse tinkiä. Sopiva poiskytemisaika riippuu joka tapauksessa lämmitettävän kohteen tyypistä ja rakenteesta. Kun taas kompensoidaan ylituotantoa, voidaan esimerkiksi lämpöpumppuja käyttää maksimitehollaan, kunnes lämminvesivaraaja, kiertovesi tai sisäilma saavuttaa soveltuvan maksimilämpötilansa. Lämpöpuppujen kompressoreiden lisäksi myös lisälämmitysvastuksia voidaan käyttää, jolloin käytetty sähköteho saattaa olla jopa kaksinkertainen.
+  Lämpöpumpuista koostuvalle virtuaalivoimalalle ominaista on nimenomaan kulutusjouston myyminen. Virtuaalivoimalan toimiessa osana lämmitysjärjestelmää, käytetään esimerkiksi lämminvesivaraajaa tai kiinteistön rakenteita energiavarastona. Kun virtuaalivoimalaa käytetään kompensoimaan alituotantoa, kytketään lämpöpumppu, lämmitysvastus tai muu vastaava sähköä kuluttava toiminta pois päältä. Lämmityslaitteiden poiskytkemisaika on yleensä maksimissaan muutamia tunteja, minkä ansiosta lämmitettävä kiinteistö tai kohde ei ehdi jäähtymään merkittävästi, eikä esimerkiksi asumismukavuudesta tarvitse tinkiä. Sopiva poiskytemisaika riippuu joka tapauksessa lämmitettävän kohteen tyypistä ja rakenteesta. Kun taas kompensoidaan ylituotantoa, voidaan esimerkiksi lämpöpumppuja käyttää maksimitehollaan, kunnes lämminvesivaraaja, kiertovesi tai sisäilma saavuttaa korkeammaksi asetetun tavoitelämpötilan. Lämpöpuppujen kompressoreiden lisäksi myös lisälämmitysvastuksia voidaan käyttää, jolloin käytetty sähköteho saattaa olla jopa kaksinkertainen.
+
+  Virtuaalivoimalaa tarjoavia yrityksiä on Suomessa esimerkiksi Fortum ja Helen. Helenin ratkaisu perustuu Optiwatti-ohjausjärjestelmään, joka ohjaa sähkölämmitysjärjestelmän releitä ja lukee antureita, sekä ohjaa lämpöpumppua tai lämminvesivaraajaa. Optiwatin käyttämästä tekniikasta ei sen sijaan löydy tietoa, mutta koska se tukee kaikkia yleisimpiä merkkejä ja malleja sekä tarvittaessa uusi malli voidaan lisätä tuettavien pumppujen joukkoon, voidaan sen olettaa käyttävän standardoituja rajapintoja.
 
 \subsection{Huipputehon rajoittaminen}
 
@@ -72,7 +74,7 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
   Monissa inverttereissä on mahdollista ohjata erilaisia kuormanohjausreleitä ohjaussignaaleilla. Tällaisia ohjausmahdollisuuksia ei kuitenkaan usein ole suoraan invertterissä, vaan ne on toteutettu modulaarisena komponenttina, joka voidaan ostaa ja asentaa invertteriin erikseen. Ohjaussignaaleita voidaan antaa eri kriteereillä, esimerkiksi aktivoida signaali määrätyn tuottotehon ylittyessä ja deaktivoida se, kun tietty tehotaso alittuu. Tällä tavalla voidaan ohjata esimerkiksi lämpöpumppua tai lämminvesivaraajan vastusta, jotta sähkö saadaan varastoitua lämpöenergiana.
 
-  Aurinkoinvertterissä ei itsessään kuitenkaan ole reaaliaikaista energiamittausta, eikä nykyisissä verkonhaltijan energiamittareissa ole reaaliaikaista mittausta, jota invertteri tai kodin automaatiojärjestelmä voisi hyödyntää. Reaaliaikainen mittaus saadaan erillisellä energiamittarilla, tai tulevaisuudessa seuraavan sukupolven AMI-mittareilla. Reaaliaikainen mittaus mahdollistaa sähkön nettomittauksen, jolloin esimerkiksi varaajasta voidaan aktivoida vain sen vaiheen lämmitysvastus, josta sähköä on siirtymässä verkon suuntaan.
+  Aurinkoinvertterissä ei itsessään kuitenkaan ole reaaliaikaista energiamittausta, eikä nykyisissä verkonhaltijan energiamittareissa ole reaaliaikaista mittausta, jota invertteri tai kodin automaatiojärjestelmä voisi hyödyntää. Reaaliaikainen mittaus saadaan erillisellä energiamittarilla, tai tulevaisuudessa seuraavan sukupolven AMI-mittareilla. Mittarien erilaiset mittaus- ja netotustavat vaikuttavat myös omatuotannosta saataviin hyötyihin, sillä osa verkonhaltijoista netottaa vaihekohtaisesti, ja osa taas kaikkien vaiheiden summana \parencite{nettomittaus}. Mikäli netotus tapahtuu vaihekohtaisesti, voidaan esimerkiksi varaajasta aktivoida vain sen vaiheen lämmitysvastus, josta sähköä on siirtymässä verkon suuntaan, mikäli vastus on ohjattavissa yksivaiheisesti. Myös lämpöpumpulle on mahdollista tuoda nettomittaustieto, jolloin sen invertteriä voidaan ohjata tarpeen mukaan.
 
 \section{Loistehon kompensointi}
   Aurinkoinverttereissä, joissa on verkkoa tukevia ominaisuuksia, on usein myös automaattinen loistehon kompensaatio. Tällöin tuotantoaikana loisteho säätyy jännitteen funktiona automaattisesti, ja siten tukee verkkoa ali- tai ylijännitetilanteissa.
@@ -85,7 +87,7 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
   Lämpöpumppuja kytketään verkkoon, jotta käyttäjät voivat etäohjata sitä tai jotta sitä voidaan ohjata aggregaattorin toimesta osana lämpöpumppupoolia. Erään riskityypin muodostavat vahingossa tai huolimattomuuttaan avoimeksi jätetyt ohjausrajapinnat. TCP-portteja voi olla avoinna niin, että kolmas osapuoli voi yrittää avata telnet- tai ssh-yhteyksiä laitteeseen. Mikäli yhteyden saa avattua käyttäen vakiokäyttäjätunnuksia ja -salasanoja, tai mahdollisesti täysin ilman tunnistautumista, ovat laitteet käytännössä kenen tahansa käytettävissä.
 
-  Jos laitteisiin otetaan yhteyttä salaamattomilla protokollilla, voidaan ohjausliikenteestä kerätä tietoja, joiden päätyminen ulkopuolisten käsiin ei ole haluttua. Mahdollisia kerättäviä tietoja voivat olla esimerkiksi asukkaan läsnäolo tai tieto peseytymisajoista, joiden vuotaminen ulkopuolisille voi vaikuttaa vähintäänkin turvallisuudentunteeseen. Ammattimainen rikollisuus voi myös käyttää näitä tietoja rikosten suunnitteluun, sillä tiedoilla pystyy määrittämään hyvinkin tarkasti, milloin koti on tyhjillään ja haavoittumaisimmillaan. Myös virtuaalivoimaloiden toiminnan seuraaminen ja mahdollinen häirintä on otettava huomioon mahdollisena uhkakuvana.
+  Jos laitteisiin otetaan yhteyttä salaamattomilla protokollilla, voidaan ohjausliikenteestä kerätä tietoja, joiden päätyminen ulkopuolisten käsiin ei ole haluttua. Mahdollisia kerättäviä tietoja voivat olla esimerkiksi asukkaan läsnäolo tai tieto peseytymisajoista, joiden vuotaminen ulkopuolisille voi vaikuttaa vähintäänkin turvallisuudentunteeseen. Ammattimainen rikollisuus voi myös käyttää näitä tietoja rikosten suunnitteluun, sillä tiedoilla pystyy määrittämään hyvinkin tarkasti, milloin koti on tyhjillään ja haavoittumaisimmillaan. Myös virtuaalivoimaloiden toiminnan seuraaminen ja mahdollinen häirintä on otettava huomioon mahdollisena uhkakuvana, sillä kilpailevat yritykset voivat hyödyntää näitä joko omassa tuotekehityksessä tai häiritäkseen toisen yrityksen liiketoimintaa.
 
   Kaapattujen eli luvatta etäohjattujen laitteiden väärinkäyttöön on monia tapoja. Pumppujen voidaan esimerkiksi ohjata tuottamaan omistajilleen ylimääräisiä kuluja tai vaihtamaan asunnon lämpötila täysin vääräksi. Mikäli lämpöpumpun yhteydessä on sulautettuna järjestelmänä esimerkiksi jokin Linux- tai Windows-käyttöjärjestelmä ohjaamassa pumpun toimintaa, pätevät siihen samat uhkakuvat kuin normaalin kotitietokoneen haltuun ottamiseen. Jos kolmas osapuoli kykenee asentamaan lämpöpumppua ohjaavaan tietokoneeseen omia ohjelmiaan, sitä voidaan käyttää vahingollisiin tarkoituksiin esimerkiksi hajautetun palvelunestohyökkäyksen toteuttamisessa.
 
