--- a/tex/yhteenveto.tex
+++ b/tex/yhteenveto.tex
@@ -16,7 +16,7 @@ Työssä tarkasteltiin kuutta eri sidosryhmää, joista Fingrid on sidoksissa va
 
 Rajapinnat mahdollistavat useita sovelluksia, mutta kaikki käsitellyt sovellukset eivät vielä ole yleistyneet Suomessa. Etämonitorointi ja -hallinta on ollut jo pidempään käytössä pilvipalveluiden muodossa, ja kiinteistöautomaatio yleistyy kotitalouksissa energiansäästötarkoituksessa.
 
-Kysyntäjousto on vasta yleistymässä Suomessa, sillä aggregaattoreita ei Suomessa oikeastaan ole. Itsenäisen aggregaattorin laajennettu pilotti käynnistyi 21.7.2020, ja siinä testataan aiemmin kokeiltujen ratkaisujen skaalautuvuutta. Fingrid on ajamassa tätä kaikille säätösähkömarkkinoille avointa pilottia eteenpäin.
+Kysyntäjousto on yleistymässä Suomessa, ja nykyisiä aggregaattoreita on muutama, esimerkiksi Fortum ja Helen. Itsenäisen aggregaattorin laajennettu pilotti käynnistyi 21.7.2020, ja siinä testataan aiemmin kokeiltujen ratkaisujen skaalautuvuutta. Fingrid on ajamassa tätä kaikille säätösähkömarkkinoille avointa pilottia eteenpäin.
 
 Teollisuuslaitosten tarvitsemia loistehon kompensaattoreita voidaan tulevaisuudessa korvata aurinkosähköjärjestelmillä, sillä suuritehoiset invertterit voivat tuottaa nimellistehollaan myös loistehoa ympäri vuorokauden. Tällöin kalliiden loistehon kompensaattoreiden takaisinmaksuaikaa voidaan pienentää, kun sitä voidaan hyödyntää myös sähköntuotantoon.
 
