ns. vikat muutokset

--- a/main.tex
+++ b/main.tex
@@ -83,7 +83,6 @@
 %\usepackage{bm}
 
 %%%%% Your commands.
-\usepackage{datetime} % vain versionumerointia varten, voi poistaa ennen lopullista
 \usepackage{multirow}
 %%%%% Glossary information.
 
@@ -106,7 +105,7 @@
 %%%%% Thesis information and title page.
 
 \title{Lämpöpumppujen ja aurinkosähköjärjestelmien kommunikaatiorajapinnat ja niiden hyödyntämismahdollisuudet}{Communication interfaces of heat pumps and PV-systems and their utilisation possibilities}
-\subtitle{Luonnoksen aikaleima: \currenttime \par \today}
+\subtitle{}
 
 % The author name.
 \author{Ilmari Marttila ja Niko Kangasniemi}
@@ -121,7 +120,7 @@
 \examiner{Prof. Sami Repo}
 
 % The finishing date of the thesis (YYYY-MM-DD).
-\finishdate{0}{0}{0}
+\finishdate{2020}{12}{19}
 
 
 \thesistype{Kandidaatintyö}
